# Mesh-Simplification

./: .gitignore  CMakeLists.txt  README.md  testlog.md
include/: mesh.h  renderer.h  shader.h
models/: Arma.off  block.off  bunny.off  dinosaur.off  fandisk.off
shader/: FragmentShader.glsl  VertexShader.glsl
src/: main.cpp  mesh.cpp  renderer.cpp
